Add more symlinks